--- a/index.css
+++ b/index.css
@@ -1,38 +1,43 @@
-*{
+* {
     margin: 0;
     padding: 0;
-    font-family: Assistant,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
+    font-family: Assistant, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
 }
 
-header{
-   display: flex;
+header {
+    display: flex;
     background-color: #ffffff;
     height: 80px;
-    justify-content:space-between;
+    justify-content: space-between;
     /* box-sizing: border-box; */
     align-items: center;
     border-bottom: 1px solid #b6b1b1;
 }
-.myntra_home{
+
+.myntra_home {
     height: 36px;
     width: 53px;
     background-color: ffffff;
-    }
+}
 
-.logo_container{
+.logo_container {
     margin-left: 4%;
     /* left ni margin sodli */
-}    
-.action_bar{
+}
+
+.action_bar {
     margin-right: 4%;
 }
-.nav_bar{
+
+.nav_bar {
     display: flex;
-    min-width: 500px; /*kamit kami widht 500 pahije nav bar chi*/
+    min-width: 500px;
+    /*kamit kami widht 500 pahije nav bar chi*/
     justify-content: space-evenly;
-    
+
 }
-.nav_bar a{
+
+.nav_bar a {
     font-size: 14px;
     letter-spacing: .3px;
     color: #282c3f;
@@ -43,62 +48,68 @@ header{
     border-bottom: 5px solid #ffffff;
 
 }
-.nav_bar a sup{
+
+.nav_bar a sup {
     color: #ff3f6c;
     font-size: 10px;
 }
 
-.nav_bar a:hover{
+.nav_bar a:hover {
     border-bottom: 5px solid #f54e77;
 }
-.search_bar{
- 
-height: 40px;
-min-width: 200px;
-width: 30%;
-display: flex;
-align-items: center;
-}
-.search_icon{
-box-sizing: content-box;
-    height: 20px;
-padding: 10px;
 
-background-color: #f5f5f6;
-font-weight: 300;
-border-radius: 4px 0 0 4px;
-color: #282c3f;
+.search_bar {
+
+    height: 40px;
+    min-width: 200px;
+    width: 30%;
+    display: flex;
+    align-items: center;
 }
-.search_input{
+
+.search_icon {
+    box-sizing: content-box;
+    height: 20px;
+    padding: 10px;
+
+    background-color: #f5f5f6;
+    font-weight: 300;
+    border-radius: 4px 0 0 4px;
+    color: #282c3f;
+}
+
+.search_input {
     color: #696e79;
     background-color: #f5f5f6;
     flex-grow: 1;
     height: 40px;
     border: 0;
-    border-radius: 0 4px  4px 0;
+    border-radius: 0 4px 4px 0;
 
 }
 
-.action_bar{
+.action_bar {
     display: flex;
     min-width: 200px;
     justify-content: space-evenly;
 }
-.action_container{
-display: flex;
-flex-direction: column;
-align-items: center;
+
+.action_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 /* Main Section */
-.banner_image{
+.banner_image {
     margin: 40px 0;
 }
-.banner_image{
+
+.banner_image {
     width: 100%;
 }
 
-.category_heading{
+.category_heading {
     text-transform: uppercase;
     color: #3e4152;
     letter-spacing: .15em;
@@ -108,40 +119,132 @@ align-items: center;
     font-weight: 700;
 }
 
-.category_heading{
+.category_heading {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
 }
 
-.sale_item{
+.sale_item {
     width: 250px;
 }
-.footer_container{
+
+.footer_container {
     padding: 30px 0px 40px 0px;
     background-color: #FAFBFC;
     display: flex;
     justify-content: space-evenly;
 }
-.footer_column{
-  display: flex;
-  flex-direction: column;
+
+.footer_column {
+    display: flex;
+    flex-direction: column;
 }
-.footer_column a{
+
+.footer_column a {
     display: flex;
     flex-direction: column;
     text-decoration: none;
     padding-bottom: 5px;
 }
 
-.footer_column h3{
+.footer_column h3 {
     color: #282c3f;
     font-size: 14px;
     margin-bottom: 25px;
 
 }
-.copyright{
+
+.copyright {
     color: #94969f;
     text-align: end;
     padding: 15px;
+}
+
+/* javascript  */
+.items-container {
+    width: 80%;
+    margin: 40px 10%;
+}
+
+.item-container {
+    width: 200px;
+}
+
+.item-image {
+    width: 100%;
+    /* parent chi width ghetli  */
+}
+
+.rating {
+    font-size: 12px;
+    font-weight: 700;
+    /* rating bold keli */
+}
+
+.componey-name {
+    margin-top: 15px;
+    font-size: 16px;
+    font—weight: 700;
+    line—height: 1;
+    color: #282c3f;
+    margin—bottom: 6px;
+    overflow: hidden;
+    text—overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.item-name {
+    color: #535766;
+    font-size: 14px;
+    line-height: 1;
+    margin-bottom: 0;
+    margin-top: 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    font-weight: 400;
+    display: block;
+
+}
+
+.price {
+    margin-top: 10px;
+    font-size: 14px;
+    line-height: 15px;
+    font-weight: 700;
+    color: #282c3f;
+    white-space: nowrap;
+}
+
+.current-price {
+    font-size: 14px;
+    font-weight: 700;
+    color: #282c3f;
+}
+
+.origonal-price {
+
+    text-decoration: line-through;
+    color: #7e818c;
+    font-weight: 400;
+    margin-left: 5px;
+    font-size: 12px;
+}
+
+.discount {
+    color: #ff905a;
+    font-weight: 400;
+    font-size: 12px;
+    margin-left:5px ;
+}
+
+.btn-add-bag {
+    margin-top: 8px;
+    font-size: 18px;
+    width: 100%;
+    background-color: lightgreen;
+    border:none;
+    padding: 5px 15px;
+    border-radius: 10px;
 }
